# multisip

./: .gitignore  LICENSE  Makefile  README.md  README_ru.md  pyproject.toml  requirements.dev.txt  requirements.txt
multisip/: __main__.py  baresip.py  common.py  config.py  icon_manager.py  log.py  log_level.py  resources.py  user_agent.py  window.py  worker.py
multisip/baresip/: __init__.py  config.py  manager.py  process.py  protocol.py  transport.py
multisip/resources/: baresip.conf  resources.qrc
multisip/ui/: add_user_agents.py  main_window.py  user_agent.py
multisip/widgets/: add_user_agents.py  main_window.py  user_agent.py
ui/: add_user_agents.ui  main_window.ui  user_agent.ui
